Fight with Image Home

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,10 @@
 <body>
     <div id="main">
         <header id="header">
-            
+            <div id="Home">
+                <img src="../Image/homik1.png" width="80px" height="80px" object-fit: contain>
+
+            </div>
         </header>
         <aside id="playLists">
 
