Ready home image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     <div id="main">
         <header id="header">
             <div id="Home">
-                <img src="../Image/homik1.png" width="80px" height="80px" object-fit: contain>
+                <img src="../Image/homik.png" id="homik">
 
             </div>
         </header>
