--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,10 @@
                 <img src="../Image/homik.png" id="homik">
 
             </div>
+            <div id="Search">
+                   <input id="Search"  placeholder="Что хотите послушать?">
+
+            </div>
         </header>
         <aside id="playLists">
 
