--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,8 +14,8 @@
 
             </div>
             <div id="Search">
-                    
-                   <input id="Search"  placeholder="Что хотите послушать?">
+                    <img id="icon" src="../Image/Lupa.png">
+                    <input id="Search"  placeholder="Что хотите послушать?">
 
             </div>
         </header>
