Ready Home and others elements ui

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,7 +37,7 @@
 
             <div id="playlist-list">
 
-                <div class="playlist-item">
+                <div class="playlist-item" data-page="playlist1">
                     <img src="../Image/defaultCover.png" class="playlist-cover">
                     <div class="playlist-info">
                         <div class="playlist-name">Название плейлиста</div>
@@ -154,7 +154,7 @@
 
                         <!-- ...добавь до 10 карт -->
                     </div>
-                    <button class="arrow right" <img src="../Image/arrow-right.png" alt="" id="top-week-next"></button>
+                    <button class="arrow right"> <img src="../Image/arrow-right.png" alt="" id="top-week-next"></button>
                 </div>
             </div>
 
