--- a/HTML/Registrate.html
+++ b/HTML/Registrate.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Регистрация Spotify</title>
-  <link rel="stylesheet" href="/CSS/Registarte.css" />
+  <link rel="stylesheet" href="/CSS/Registor.css" />
 </head>
 <body>
+  
   <div class="container">
     <h1>Зарегистрируйтесь и погрузитесь в музыку</h1>
-
+    
     <input type="email" placeholder="Электронная почта" class="input email" />
     <input type="text" placeholder="Название профиля" class="input username" />
     <input type="password" placeholder="Пароль" class="input password" />
@@ -21,6 +22,6 @@
 
     <p id = "login-link" class="login-link">Уже есть аккаунт? <a href="#">Войти</a></p>
   </div>
-  <script src="/JAVASCRIPT/Registrate.js"></script>
+  <script src="/JAVASCRIPT/Registor.js"></script>
 </body>
 </html>
