--- a/HTML/MyPlaylist.html
+++ b/HTML/MyPlaylist.html
@@ -22,7 +22,7 @@
 
         </div>
 
-        <div id="Search">
+        <div id="Searchbar">
             <img id="icon" src="../Image/Lupa.png">
             <input id="Search" placeholder="Что хотите послушать?">
         </div>
