--- a/HTML/Registrate.html
+++ b/HTML/Registrate.html
@@ -12,7 +12,7 @@
 		<h1>Зарегистрируйтесь и погрузитесь в музыку</h1>
 		<form action="/PHP/Registrate.php" method="POST">
 			<input name="email" type="email" placeholder="Электронная почта" class="input email" required/>
-			<input name="username" type="text" placeholder="Номер телефона" class="input username" required/>
+			<input name="username" type="text" placeholder="Логин" class="input username" required/>
 			<input name="password" type="password" placeholder="Пароль" class="input password" required/>
 			<input name="password_confirm" type="password" placeholder="Повторите пароль" class="input confirm-password" required/>
 
